# SLIME-Core

./: .gitignore  ARCHITECTURE_SECURITY_MODEL.md  CANON.md  CONFORMANCE.md  FULL_STACK_CONFORMANCE.md  GENESIS_PROOF.md  INTERPRETATION_GUIDE.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  SAFA_ADAPTER_MAPPING.md  SLIME_FORMAL_CORE.md
enterprise/actuator/: Cargo.toml  README.md
enterprise/actuator-min/: EGRESS_DECODER.md
enterprise/actuator-min/src/: main.rs
enterprise/actuator/src/: main.rs
enterprise/adversarial/tests/: T02_SOCKET_PERMISSION_TAMPER.md  T03_EGRESS_SIZE_INTEGRITY.md
enterprise/slime-enterprise/: install.sh  uninstall.sh
enterprise/slime-enterprise/systemd/: actuator.service
noncanon/enterprise/: ACTUATOR_TCB.md  PHASE5_NOTES.md
noncanon/enterprise/adversarial/phase4/: README.md
noncanon/enterprise/dashboard/: server.py
noncanon/enterprise/demo-client/: demo.sh
noncanon/enterprise/slime-enterprise/systemd/: slime.service
noncanon/implementation_bundle/: README.md
noncanon/implementation_bundle/actuator-dummy/: main.rs
noncanon/implementation_bundle/slime-runner/: Cargo.toml
noncanon/implementation_bundle/slime-runner/resources/: dashboard.html
noncanon/implementation_bundle/slime-runner/src/: main.rs
noncanon/implementation_bundle/slime-runner/tests/: mb01_env_var_poison.rs  mb02_binary_diff.rs  mb03_build_repro.rs  mb04_no_profile_open.rs  mb05_ingress_before_egress.rs
specs/: EGRESS_SOCKET_SPEC.md  INGRESS_API_SPEC.md  V1_INVARIANTS.md
