[package]
name = "slime-runner"
version = "0.4.0"
edition = "2021"
description = "SLIME reference runner — sealed law-layer execution environment"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["stub_ab"]
stub_ab = []
real_ab = []
private_validation = []
integration_demo = []
